--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "termux-whatsapp-bot",
+  "name": "Zero-Bot",
   "version": "0.0.2",
   "description": "Only termux",
   "main": "index.js",
@@ -17,7 +17,7 @@
     "whatsapp",
     "bot"
   ],
-  "author": "NazwaS",
+  "author": "Zero",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/baileys": "github:adiwajshing/baileys",
